// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands config test (folder with rcfile / as json) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "{"key":"defaultLanguageName","effective":"node","description":"Default language mode that should be used when a package doesn't offer any insight","type":"STRING","default":"node"}
{"key":"initScope","effective":"my-test","source":"WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc","description":"Scope used when creating packages via the init command","type":"STRING","default":null}
{"key":"lastUpdateCheck","effective":null,"description":"Last timestamp we checked whether new Yarn versions were available","type":"STRING","default":null}
",
}
`;

exports[`Commands config test (folder with rcfile / showing explanation) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: <default>
 - └─ Value: null
",
}
`;

exports[`Commands config test (folder with rcfile / showing the source) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: <default>
 - └─ Value: null
",
}
`;

exports[`Commands config test (folder with rcfile / without flags) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: <default>
 - └─ Value: null
",
}
`;

exports[`Commands config test (folder with rcfile and rc in ancestor parent / as json) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "{"key":"defaultLanguageName","effective":"node","description":"Default language mode that should be used when a package doesn't offer any insight","type":"STRING","default":"node"}
{"key":"initScope","effective":"my-test","source":"WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc","description":"Scope used when creating packages via the init command","type":"STRING","default":null}
{"key":"lastUpdateCheck","effective":"1555784893958","source":"WORKSPACE_ROOT/.spec-yarnrc","description":"Last timestamp we checked whether new Yarn versions were available","type":"STRING","default":null}
",
}
`;

exports[`Commands config test (folder with rcfile and rc in ancestor parent / showing explanation) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: WORKSPACE_ROOT/.spec-yarnrc
 - └─ Value: '1555784893958'
",
}
`;

exports[`Commands config test (folder with rcfile and rc in ancestor parent / showing the source) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: WORKSPACE_ROOT/.spec-yarnrc
 - └─ Value: '1555784893958'
",
}
`;

exports[`Commands config test (folder with rcfile and rc in ancestor parent / without flags) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: WORKSPACE_ROOT/.spec-yarnrc
 - └─ Value: '1555784893958'
",
}
`;

exports[`Commands config test (folder with rcfile and rc in home folder / as json) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "{"key":"defaultLanguageName","effective":"node","description":"Default language mode that should be used when a package doesn't offer any insight","type":"STRING","default":"node"}
{"key":"initScope","effective":"my-test","source":"WORKSPACE_ROOT/.spec-yarnrc","description":"Scope used when creating packages via the init command","type":"STRING","default":null}
{"key":"lastUpdateCheck","effective":"1555784893958","source":"WORKSPACE_ROOT/.spec-yarnrc","description":"Last timestamp we checked whether new Yarn versions were available","type":"STRING","default":null}
",
}
`;

exports[`Commands config test (folder with rcfile and rc in home folder / showing explanation) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: WORKSPACE_ROOT/.spec-yarnrc
 - └─ Value: '1555784893958'
",
}
`;

exports[`Commands config test (folder with rcfile and rc in home folder / showing the source) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: WORKSPACE_ROOT/.spec-yarnrc
 - └─ Value: '1555784893958'
",
}
`;

exports[`Commands config test (folder with rcfile and rc in home folder / without flags) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: WORKSPACE_ROOT/.spec-yarnrc
 - └─ Value: '1555784893958'
",
}
`;

exports[`Commands config test (folder with rcfile and rc in parent / as json) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "{"key":"defaultLanguageName","effective":"node","description":"Default language mode that should be used when a package doesn't offer any insight","type":"STRING","default":"node"}
{"key":"initScope","effective":"my-test","source":"WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc","description":"Scope used when creating packages via the init command","type":"STRING","default":null}
{"key":"lastUpdateCheck","effective":"1555784893958","source":"WORKSPACE_ROOT/subfolder/.spec-yarnrc","description":"Last timestamp we checked whether new Yarn versions were available","type":"STRING","default":null}
",
}
`;

exports[`Commands config test (folder with rcfile and rc in parent / showing explanation) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: WORKSPACE_ROOT/subfolder/.spec-yarnrc
 - └─ Value: '1555784893958'
",
}
`;

exports[`Commands config test (folder with rcfile and rc in parent / showing the source) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: WORKSPACE_ROOT/subfolder/.spec-yarnrc
 - └─ Value: '1555784893958'
",
}
`;

exports[`Commands config test (folder with rcfile and rc in parent / without flags) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: WORKSPACE_ROOT/subfolder/.spec-yarnrc
 - └─ Value: '1555784893958'
",
}
`;

exports[`Commands config test (folder with rcfile without trailing newline / as json) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "{"key":"defaultLanguageName","effective":"node","description":"Default language mode that should be used when a package doesn't offer any insight","type":"STRING","default":"node"}
{"key":"initScope","effective":"my-test","source":"WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc","description":"Scope used when creating packages via the init command","type":"STRING","default":null}
{"key":"lastUpdateCheck","effective":null,"description":"Last timestamp we checked whether new Yarn versions were available","type":"STRING","default":null}
",
}
`;

exports[`Commands config test (folder with rcfile without trailing newline / showing explanation) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: <default>
 - └─ Value: null
",
}
`;

exports[`Commands config test (folder with rcfile without trailing newline / showing the source) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: <default>
 - └─ Value: null
",
}
`;

exports[`Commands config test (folder with rcfile without trailing newline / without flags) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: WORKSPACE_ROOT/subfolder/subfolder/.spec-yarnrc
│ - └─ Value: 'my-test'
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: <default>
 - └─ Value: null
",
}
`;

exports[`Commands config test (folder without rcfile in ancestry / as json) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "{"key":"defaultLanguageName","effective":"node","description":"Default language mode that should be used when a package doesn't offer any insight","type":"STRING","default":"node"}
{"key":"initScope","effective":null,"description":"Scope used when creating packages via the init command","type":"STRING","default":null}
{"key":"lastUpdateCheck","effective":null,"description":"Last timestamp we checked whether new Yarn versions were available","type":"STRING","default":null}
",
}
`;

exports[`Commands config test (folder without rcfile in ancestry / showing explanation) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: <default>
│ - └─ Value: null
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: <default>
 - └─ Value: null
",
}
`;

exports[`Commands config test (folder without rcfile in ancestry / showing the source) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: <default>
│ - └─ Value: null
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: <default>
 - └─ Value: null
",
}
`;

exports[`Commands config test (folder without rcfile in ancestry / without flags) 1`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "├─ defaultLanguageName
│ - ├─ Description: Default language mode that should be used when a package doesn't offer any insight
│ - ├─ Source: <default>
│ - └─ Value: 'node'
│
├─ initScope
│ - ├─ Description: Scope used when creating packages via the init command
│ - ├─ Source: <default>
│ - └─ Value: null
│
└─ lastUpdateCheck
 - ├─ Description: Last timestamp we checked whether new Yarn versions were available
 - ├─ Source: <default>
 - └─ Value: null
",
}
`;
